--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,22 @@
-*{
-  box-sizing: border-box;
-}
+/* Estilos Mobile First */
 body {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: Nunito;
+  font-family: Nunito, sans-serif;
 }
 
 .container {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  align-content: center;
+  flex-direction: column;
 }
 
 .menu-lateral-box {
-  flex: 0.2;
-  height: 100vh;
+  flex: 1;
   width: 100%;
   font-size: 1rem;
   padding: 0 10px;
+  position: relative;
 }
 
 .menu-lateral-box .logo {
@@ -28,46 +24,55 @@ body {
 }
 
 .menu-lateral-box .logo img {
-  width: 200px;
+  width: 150px;
   margin-bottom: 1rem;
 }
 
-.menu-lateral-box ul {
+.menu-opcoes-box {
+  display: none;
+}
+
+.menu-opcoes-box ul {
   padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.menu-lateral-box ul a {
+.menu-opcoes-box ul a {
   list-style-type: none;
-    cursor: pointer;
-    user-select: none;
-    color: #25396f;
-    margin-bottom: 10px;
-    padding: .7rem 1rem;
-    border-radius: .5rem;
-    width: 80%;
-    text-decoration: none;
+  cursor: pointer;
+  color: #25396f;
+  margin-bottom: 10px;
+  padding: .7rem 1rem;
+  border-radius: .5rem;
+  width: 80%;
+  text-decoration: none;
 }
 
-.menu-lateral-box ul a:hover {
+.menu-opcoes-box ul a:hover {
   background-color: rgba(96, 114, 134, 0.637);
-  margin-left: 20px;
 }
 
-.menu-lateral-box li span {
+.menu-opcoes-box li span {
   margin-left: 10px;
 }
 
-.menu-lateral-box .active {
+.menu-opcoes-box .active {
   background-color: #25396f;
   color: white;
 }
 
-.menu-lateral-box .active:hover {
-  background-color: #25396f;
-  color: white;
+.menu-toggle {
+  display: block;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  color: #25396f;
 }
 
 .page-box {
@@ -84,13 +89,12 @@ body {
 
 .page-box .page-box-container {
   flex: 1;
-    background-color: white;
-    padding: 30px;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    flex-direction: column;
+  background-color: white;
+  padding: 30px;
+  display: flex;
+  align-content: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
 } 
 
 .page-box .footer {
@@ -98,21 +102,15 @@ body {
   justify-content: space-between;
   align-items: flex-end; 
   padding: 10px;
-  
-}
-.page-box .footer div {
 }
 
-/* Estilo da div que contém o input e o label */
 .input-field {
   position: relative;
   margin: 1.5rem;
-  flex: 1 1 calc(33.33% - 3rem);
-  /* 3 inputs por linha, considerando a margem */
+  flex: 1 1 calc(100% - 3rem);
   box-sizing: border-box;
 }
 
-/* Estilo do input */
 .input-field input {
   border: none;
   border-bottom: 1px solid #9e9e9e;
@@ -123,7 +121,6 @@ body {
   transition: border-color 0.3s;
 }
 
-/* Estilo do input focado */
 .input-field input:focus {
   border-bottom: 2px solid #25396f;
 }
@@ -132,7 +129,6 @@ body {
   background-color: transparent;
 }
 
-/* Estilo do label */
 .input-field label {
   color: #9e9e9e;
   position: absolute;
@@ -143,9 +139,8 @@ body {
   pointer-events: none;
 }
 
-/* Estilo do label quando o input está focado ou preenchido */
-.input-field input:focus+label,
-.input-field input:not(:placeholder-shown)+label {
+.input-field input:focus + label,
+.input-field input:not(:placeholder-shown) + label {
   transform: translateY(-1.5rem);
   font-size: 0.8rem;
   color: #25396f;
@@ -162,11 +157,9 @@ body {
   align-items: center;
   margin-bottom: 15px;
   margin: 1.5rem;
-  width: 100%;
 }
 
 .form-group label {
-  /* flex: 0 0 150px; */
   font-weight: bold;
 }
 
@@ -178,7 +171,6 @@ body {
   margin-left: 10px;
   background-color: #72AFD4;
 }
-
 
 .form-group input:focus {
   outline: none;
@@ -198,34 +190,33 @@ body {
   border-color: transparent;
 }
 
-.btn-box {
-  flex: 1;
-  /* background-color: yellow; */
-  display: flex;
-  flex-direction: row;
-  align-content: flex-end;
-  flex-wrap: wrap;
-  align-items: flex-end;
-  justify-content: center;
-}
+/* Estilos para telas maiores */
+@media(min-width: 768px) {
+  .container {
+      flex-direction: row;
+  }
 
-.btn-box button {
-  padding: 10px;
-  border-radius: 15px;
-  width: 13%;
-  background-color: #25396f;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-  border: none;
-  transition: transform 0.1s, background-color 0.1s;
-}
+  .menu-lateral-box {
+      flex: 0.2;
+      height: 100vh;
+      width: 100%;
+      position: relative;
+  }
 
-.btn-box button:hover {
-  background-color: #112869;
-}
+  .menu-opcoes-box {
+      display: block;
+  }
 
-.btn-box button:active {
-  transform: scale(0.95);
-  background-color: #0f214d;
+  .menu-toggle {
+      display: none;
+  }
+
+  .page-box {
+      flex: 1;
+      padding: 2rem 2rem .1rem 2rem;
+  }
+
+  .input-field {
+      flex: 1 1 calc(33.33% - 3rem);
+  }
 }
