--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -8,6 +8,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 300ms ease, visibility 300ms ease;
+}
+
+.modal.show {
+  opacity: 1;
+  visibility: visible;
 }
 
 .modal .modal-content {
@@ -18,7 +26,12 @@
   max-width: 100%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
   position: relative;
-  /* transition: opacity 400ms, transform 400ms; */
+  transform: scale(0.95);
+  transition: transform 300ms ease, opacity 300ms ease;
+}
+
+.modal.show .modal-content {
+  transform: scale(1);
 }
 
 .modal .modal-header,
@@ -59,24 +72,4 @@
 
 .modal .close-button:active {
   transform: scale(0.95);
-}
-
-.modal-content-enter {
-  opacity: 0;
-  transform: scale(0.9);
-}
-
-.modal-content-enter-active {
-  opacity: 1;
-  transform: scale(1);
-  transition: opacity 400ms, transform 400ms;
-}
-.modal-content-exit {
-  opacity: 1;
-  transform: scale(1);
-}
-.modal-content-exit-active {
-  opacity: 0;
-  transform: scale(0.9);
-  transition: opacity 400ms, transform 400ms;
 }
