--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -21,17 +21,21 @@
 .modal .modal-content {
   background: white;
   padding: 20px;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   width: 70%;
   max-width: 100%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
   position: relative;
   transform: scale(0.95);
-  transition: transform 300ms ease, opacity 300ms ease;
+  /* transition: transform 300ms ease, opacity 300ms ease; */
+  border-radius: 50%; /* Faz o elemento começar como um círculo */
+  transform: scale(0); /* Começa com o modal completamente escalado para baixo */
+  transition: transform 300ms ease, opacity 300ms ease, border-radius 300ms ease;
 }
 
 .modal.show .modal-content {
   transform: scale(1);
+  border-radius: 5px;
 }
 
 .modal .modal-header,
