--- a/src/App.css
+++ b/src/App.css
@@ -255,10 +255,10 @@ body {
     display: block;
   }
 
-  .menu-opcoes-box ul li a:hover,
+  /* .menu-opcoes-box ul li a:hover,
   .menu-opcoes-box ul a:hover {
     margin-left: 20px;
-  }
+  } */
 
   .menu-toggle {
     display: none;
