--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -22,7 +22,6 @@
   background: white;
   padding: 20px;
   /* border-radius: 5px; */
-  width: 70%;
   max-width: 100%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
   position: relative;
@@ -31,6 +30,14 @@
   border-radius: 50%; /* Faz o elemento começar como um círculo */
   transform: scale(0); /* Começa com o modal completamente escalado para baixo */
   transition: transform 300ms ease, opacity 300ms ease, border-radius 300ms ease;
+}
+
+.modal .small {
+  width: 30%;
+}
+
+.modal .larg {
+  width: 70%;
 }
 
 .modal.show .modal-content {
@@ -43,7 +50,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-direction: row-reverse;
+  flex-direction: row;
+  margin-bottom: 30px;
+}
+
+.modal .modal-header div{
+  text-align: center;
+  width: 100%;
 }
 
 .modal .modal-title {
